fist aop config

--- a/s07-spring-transaction-demo/pom.xml
+++ b/s07-spring-transaction-demo/pom.xml
@@ -63,5 +63,6 @@
 	</build>
 	<modules>
 		<module>ep01-spring-jdbc-transaction-xml</module>
+		<module>ep01-aop-xml</module>
 	</modules>
 </project>
